[gd_scene load_steps=24 format=3 uid="uid://xqjghw70oxkf"]

[ext_resource type="Texture2D" uid="uid://bjxw2pfj1bxhr" path="res://Assets/Textures/icon.svg" id="1_ajy74"]
[ext_resource type="Script" uid="uid://ds284ijxir0f7" path="res://Scripts/Other/player.gd" id="1_t86h6"]
[ext_resource type="Texture2D" uid="uid://dr60j0t3upeb4" path="res://Assets/Textures/Player.png" id="2_k46cm"]
[ext_resource type="Script" uid="uid://pxkbysso4esr" path="res://Scripts/Other/CameraLimiter.gd" id="3_5f5w1"]
[ext_resource type="PackedScene" uid="uid://br7sveoej6sjf" path="res://Scenes/UI/ui.tscn" id="4_r6m6p"]
[ext_resource type="Script" uid="uid://cy6otwbqa0w1x" path="res://Scripts/Other/hunger_and_thirst.gd" id="5_s8rx5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k46cm"]
atlas = ExtResource("2_k46cm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsrq0"]
atlas = ExtResource("2_k46cm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgsvj"]
atlas = ExtResource("2_k46cm")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d83tg"]
atlas = ExtResource("2_k46cm")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oej56"]
atlas = ExtResource("2_k46cm")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3k6v"]
atlas = ExtResource("2_k46cm")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7c1o"]
atlas = ExtResource("2_k46cm")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_12acn"]
atlas = ExtResource("2_k46cm")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydoy"]
atlas = ExtResource("2_k46cm")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff814"]
atlas = ExtResource("2_k46cm")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_a48mv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k46cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsrq0")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgsvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d83tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oej56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3k6v")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7c1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12acn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff814")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t86h6"]
size = Vector2(96.66666, 93.33333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6m6p"]
size = Vector2(192, 192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8rx5"]
size = Vector2(213.33333, 213.33331)

[sub_resource type="Animation" id="Animation_s8rx5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r6m6p"]
resource_name = "pulse"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.5764706), Color(1, 1, 1, 0.09803922)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s8rx5"]
_data = {
&"RESET": SubResource("Animation_s8rx5"),
&"pulse": SubResource("Animation_r6m6p")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
texture_filter = 1
scale = Vector2(0.3, 0.3)
collision_layer = 2
collision_mask = 21
script = ExtResource("1_t86h6")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_a48mv")
animation = &"walking"
autoplay = "idle"
frame_progress = 0.26571697

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.6666682, 1.589457e-06)
shape = SubResource("RectangleShape2D_t86h6")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.96, 1.96)
limit_left = 0
limit_top = 0
script = ExtResource("3_5f5w1")

[node name="InteractionRange" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionRange"]
shape = SubResource("RectangleShape2D_r6m6p")

[node name="Stamina" type="ProgressBar" parent="."]
offset_left = -64.0
offset_top = -112.0
offset_right = 64.0
offset_bottom = -85.0
show_percentage = false

[node name="UI" parent="." instance=ExtResource("4_r6m6p")]

[node name="Tools" type="Node2D" parent="."]

[node name="StructurePreview" type="Area2D" parent="."]
visible = false
position = Vector2(213.33333, 0)
collision_layer = 512
collision_mask = 273

[node name="Sprite2D" type="Sprite2D" parent="StructurePreview"]
position = Vector2(3.0517578e-05, 0)
scale = Vector2(1.6666667, 1.6666666)
texture = ExtResource("1_ajy74")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StructurePreview"]
position = Vector2(2.2888184e-05, 0)
shape = SubResource("RectangleShape2D_s8rx5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="StructurePreview"]
libraries = {
&"": SubResource("AnimationLibrary_s8rx5")
}
autoplay = "pulse"

[node name="HungerAndThirst" type="Node" parent="."]
script = ExtResource("5_s8rx5")
hunger_per_second = 0.01

[node name="Timer" type="Timer" parent="HungerAndThirst"]
autostart = true

[connection signal="timeout" from="HungerAndThirst/Timer" to="HungerAndThirst" method="_on_timer_timeout"]
